--- a/src/fxml/Request.fxml
+++ b/src/fxml/Request.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RequestController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RequestController">
    <children>
       <GridPane prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -32,23 +32,38 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="btncreate" mnemonicParsing="false" onAction="#createPressed" text="Create" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
-            <Button fx:id="btncancel" mnemonicParsing="false" onAction="#cancelPressed" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
+            <Button fx:id="btncreate" mnemonicParsing="false" onAction="#createPressed" text="Create" GridPane.halignment="CENTER" GridPane.rowIndex="7">
+               <font>
+                  <Font size="24.0" />
+               </font></Button>
+            <Button fx:id="btncancel" mnemonicParsing="false" onAction="#cancelPressed" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="7">
+               <font>
+                  <Font size="24.0" />
+               </font></Button>
             <Label text="Service Request Form" GridPane.columnSpan="2" GridPane.halignment="CENTER">
                <font>
-                  <Font size="25.0" />
+                  <Font size="56.0" />
                </font>
             </Label>
             <Label text="Service" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
-                  <Font size="15.0" />
+                  <Font size="36.0" />
                </font>
             </Label>
-            <Label text="Staff Member" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-            <Label text="Date" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-            <Label text="Time" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+            <Label text="Staff Member" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+               <font>
+                  <Font size="36.0" />
+               </font></Label>
+            <Label text="Date" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+               <font>
+                  <Font size="36.0" />
+               </font></Label>
+            <Label text="Time" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+               <font>
+                  <Font size="36.0" />
+               </font></Label>
             <Label GridPane.halignment="CENTER" GridPane.rowIndex="5" />
-            <DatePicker fx:id="dateMenu" onAction="#dateSelected" promptText="Select a date" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+            <DatePicker fx:id="dateMenu" onAction="#dateSelected" prefHeight="36.0" prefWidth="249.0" promptText="Select a date" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
             <GridPane hgap="10.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -70,7 +85,7 @@
                   <Insets left="10.0" right="10.0" />
                </padding>
                <children>
-                  <MenuButton fx:id="hourDropDown" mnemonicParsing="false" onAction="#hourSelected" text="HH">
+                  <MenuButton fx:id="hourDropDown" mnemonicParsing="false" onAction="#hourSelected" prefHeight="42.0" prefWidth="84.0" text="HH">
                     <items>
                       <MenuItem mnemonicParsing="false" onAction="#hourSelected" text="1" />
                       <MenuItem mnemonicParsing="false" onAction="#hourSelected" text="2" />
@@ -86,7 +101,7 @@
                         <MenuItem mnemonicParsing="false" onAction="#hourSelected" text="12" />
                     </items>
                   </MenuButton>
-                  <MenuButton fx:id="minDropDown" mnemonicParsing="false" onAction="#minSelected" text="MM" GridPane.columnIndex="1">
+                  <MenuButton fx:id="minDropDown" mnemonicParsing="false" onAction="#minSelected" prefHeight="39.0" prefWidth="77.0" text="MM" GridPane.columnIndex="1">
                      <items>
                         <MenuItem mnemonicParsing="false" onAction="#minSelected" text="00" />
                         <MenuItem mnemonicParsing="false" onAction="#minSelected" text="15" />
@@ -94,7 +109,7 @@
                         <MenuItem mnemonicParsing="false" onAction="#minSelected" text="45" />
                      </items>
                   </MenuButton>
-                  <MenuButton fx:id="meridDropDown" mnemonicParsing="false" onAction="#meridSelected" text="     " GridPane.columnIndex="2">
+                  <MenuButton fx:id="meridDropDown" mnemonicParsing="false" onAction="#meridSelected" prefHeight="33.0" prefWidth="76.0" text="     " GridPane.columnIndex="2">
                      <items>
                         <MenuItem mnemonicParsing="false" onAction="#meridSelected" text="AM" />
                         <MenuItem mnemonicParsing="false" onAction="#meridSelected" text="PM" />
@@ -102,8 +117,8 @@
                   </MenuButton>
                </children>
             </GridPane>
-            <ChoiceBox fx:id="staffDropDown" disable="true" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <MenuButton fx:id="serviceDropDown" mnemonicParsing="false" text="Select a service" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <ChoiceBox fx:id="staffDropDown" disable="true" prefHeight="40.0" prefWidth="235.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+            <MenuButton fx:id="serviceDropDown" mnemonicParsing="false" prefHeight="40.0" prefWidth="235.0" text="Select a service" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#serviceSelected" text="Food" />
                   <MenuItem mnemonicParsing="false" onAction="#serviceSelected" text="Translator" />
@@ -116,8 +131,11 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </TextArea>
-            <Label text="Location" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
-            <ChoiceBox fx:id="locationChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
+            <Label text="Location" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+               <font>
+                  <Font size="36.0" />
+               </font></Label>
+            <ChoiceBox fx:id="locationChoiceBox" prefHeight="40.0" prefWidth="235.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
          </children>
       </GridPane>
    </children>
