--- a/src/fxml/AddNode.fxml
+++ b/src/fxml/AddNode.fxml
@@ -8,8 +8,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -18,45 +18,16 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #005697;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <children>
-      <JFXTabPane layoutX="10.0" layoutY="10.0" prefHeight="800.0" prefWidth="1280.0" side="BOTTOM" style="-fx-background-color: #005697;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <tabs>
-            <Tab fx:id="tL2" text="L2">
-               <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-               </content>
-            </Tab>
-            <Tab fx:id="tL1" text="L1">
-               <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-               </content>
-            </Tab>
-            <Tab fx:id="tG" text="G">
-               <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-               </content>
-            </Tab>
-            <Tab fx:id="t1" text="1">
-               <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-               </content>
-            </Tab>
-            <Tab fx:id="t2" text="2">
-               <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-               </content>
-            </Tab>
-            <Tab fx:id="t3" text="3">
-               <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-               </content>
-            </Tab>
-         </tabs>
-      </JFXTabPane>
-      <TitledPane animated="false" layoutX="14.0" layoutY="14.0" prefHeight="750.0" prefWidth="350.0" text="Map Edit">
-         <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #008faa;">
+      <JFXButton fx:id="btnReturn" buttonType="RAISED" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #d6d6d6;" text="Return" translateX="1100.0" translateY="50.0">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </JFXButton>
+      <SplitPane dividerPositions="0.2589984350547731" prefHeight="800.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane maxWidth="350.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #008faa;">
                <children>
-                  <JFXTabPane layoutX="84.0" layoutY="132.0" prefHeight="710.0" prefWidth="348.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <JFXTabPane prefHeight="798.4" prefWidth="378.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <tabs>
                         <Tab text="Add Node">
                           <content>
@@ -78,7 +49,7 @@
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                       </rowConstraints>
                                        <children>
-                                          <JFXTextField focusColor="WHITE" promptText="Node ID" unFocusColor="#00daff" GridPane.columnSpan="2">
+                                          <JFXTextField fx:id="txtfldNodeAddNodeID" focusColor="WHITE" promptText="Node ID" unFocusColor="#00daff" GridPane.columnSpan="2">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
@@ -86,7 +57,7 @@
                                                 <Insets left="15.0" right="15.0" />
                                              </GridPane.margin>
                                           </JFXTextField>
-                                          <JFXTextField focusColor="WHITE" promptText="X-Coordinate" unFocusColor="#00daff" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                                          <JFXTextField fx:id="txtfldNodeAddX" focusColor="WHITE" promptText="X-Coordinate" unFocusColor="#00daff" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
@@ -94,7 +65,7 @@
                                                 <Insets left="15.0" right="15.0" />
                                              </GridPane.margin>
                                           </JFXTextField>
-                                          <JFXTextField focusColor="WHITE" promptText="Y-Coordinate" unFocusColor="#00daff" GridPane.columnSpan="2" GridPane.rowIndex="2">
+                                          <JFXTextField fx:id="txtfldNodeAddY" focusColor="WHITE" promptText="Y-Coordinate" unFocusColor="#00daff" GridPane.columnSpan="2" GridPane.rowIndex="2">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
@@ -112,7 +83,7 @@
                                                 <Font size="18.0" />
                                              </font>
                                           </JFXButton>
-                                          <JFXTextField focusColor="WHITE" promptText="Name" unFocusColor="#00daff" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+                                          <JFXTextField fx:id="txtfldNodeAddName" focusColor="WHITE" promptText="Name" unFocusColor="#00daff" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
@@ -187,7 +158,7 @@
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                        </rowConstraints>
                                        <children>
-                                          <JFXTextField focusColor="WHITE" promptText="Node ID" unFocusColor="#00daff" GridPane.columnSpan="2">
+                                          <JFXTextField fx:id="txtfldNodeEditNodeID" focusColor="WHITE" promptText="Node ID" unFocusColor="#00daff" GridPane.columnSpan="2">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
@@ -195,7 +166,7 @@
                                                 <Insets left="15.0" right="15.0" />
                                              </GridPane.margin>
                                           </JFXTextField>
-                                          <JFXTextField focusColor="WHITE" promptText="X-Coordinate" unFocusColor="#00daff" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                                          <JFXTextField fx:id="txtfldNodeEditX" focusColor="WHITE" promptText="X-Coordinate" unFocusColor="#00daff" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
@@ -203,7 +174,7 @@
                                                 <Insets left="15.0" right="15.0" />
                                              </GridPane.margin>
                                           </JFXTextField>
-                                          <JFXTextField focusColor="WHITE" promptText="Y-Coordinate" unFocusColor="#00daff" GridPane.columnSpan="2" GridPane.rowIndex="2">
+                                          <JFXTextField fx:id="txtfldNodeEditY" focusColor="WHITE" promptText="Y-Coordinate" unFocusColor="#00daff" GridPane.columnSpan="2" GridPane.rowIndex="2">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
@@ -221,7 +192,7 @@
                                                 <Font size="18.0" />
                                              </font>
                                           </JFXButton>
-                                          <JFXTextField focusColor="WHITE" promptText="Name" unFocusColor="#00daff" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                                          <JFXTextField fx:id="txtfldNodeEditName" focusColor="WHITE" promptText="Name" unFocusColor="#00daff" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="4">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
@@ -284,15 +255,45 @@
                   </JFXTabPane>
                </children>
             </AnchorPane>
-         </content>
-         <font>
-            <Font size="18.0" />
-         </font>
-      </TitledPane>
-      <JFXButton fx:id="btnReturn" buttonType="RAISED" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #d6d6d6;" text="Return" translateX="1100.0" translateY="50.0">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </JFXButton>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <JFXTabPane prefHeight="798.4" prefWidth="894.4" side="BOTTOM" style="-fx-background-color: #005697;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <tabs>
+                        <Tab fx:id="tL2" text="L2">
+                           <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                           </content>
+                        </Tab>
+                        <Tab fx:id="tL1" text="L1">
+                           <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                           </content>
+                        </Tab>
+                        <Tab fx:id="tG" text="G">
+                           <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                           </content>
+                        </Tab>
+                        <Tab fx:id="t1" text="1">
+                           <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                           </content>
+                        </Tab>
+                        <Tab fx:id="t2" text="2">
+                           <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                           </content>
+                        </Tab>
+                        <Tab fx:id="t3" text="3">
+                           <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                           </content>
+                        </Tab>
+                     </tabs>
+                  </JFXTabPane>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
    </children>
 </AnchorPane>
