--- a/src/fxml/Path.fxml
+++ b/src/fxml/Path.fxml
@@ -20,26 +20,26 @@
       <AnchorPane layoutX="-7.0" layoutY="-7.0" prefHeight="150.0" prefWidth="1294.0" />
       <SplitPane dividerPositions="0.18796992481203006" orientation="VERTICAL" prefHeight="800.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
-          <AnchorPane maxHeight="150.0" minHeight="100.0" minWidth="0.0" prefHeight="150.0" prefWidth="160.0">
+          <AnchorPane maxHeight="100.0" minHeight="100.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
                   <GridPane prefHeight="770.0" prefWidth="1294.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="422.0" minWidth="10.0" prefWidth="258.0" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="370.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="817.0" minWidth="10.0" prefWidth="347.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="817.0" minWidth="10.0" prefWidth="366.60002441406255" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="162.5999755859375" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="300.0" />
                      </columnConstraints>
                      <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <JFXButton fx:id="btnEnter" onAction="#enterPressed" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #d6d6d6;" text="Go!" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+                        <JFXButton fx:id="btnEnter" onAction="#enterPressed" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #d6d6d6;" text="Go!" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                            <font>
                               <Font size="24.0" />
                            </font>
                         </JFXButton>
-                        <JFXCheckBox style="-fx-border-color: #008faa; -fx-background-color: #ffffff;" text="Stairs?" unCheckedColor="#09b5ff" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                        <JFXCheckBox prefHeight="49.0" prefWidth="102.0" style="-fx-border-color: #008faa; -fx-background-color: #ffffff;" text="Stairs?" unCheckedColor="#09b5ff" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                            <font>
                               <Font size="24.0" />
                            </font>
@@ -47,7 +47,7 @@
                               <Insets />
                            </GridPane.margin>
                         </JFXCheckBox>
-                        <JFXTextField focusColor="#408dff" labelFloat="true" promptText="Start" style="-fx-border-color: #008faa; -fx-background-color: #FFFFFF;" unFocusColor="WHITE" GridPane.columnIndex="1" GridPane.rowSpan="2">
+                        <JFXTextField alignment="CENTER" focusColor="#408dff" labelFloat="true" promptText="Start" style="-fx-border-color: #008faa; -fx-background-color: #FFFFFF;" unFocusColor="WHITE" GridPane.columnIndex="1" GridPane.rowSpan="2">
                            <font>
                               <Font size="24.0" />
                            </font>
@@ -55,7 +55,7 @@
                               <Insets left="15.0" right="15.0" />
                            </GridPane.margin>
                         </JFXTextField>
-                        <JFXTextField focusColor="#3ce8ff" labelFloat="true" promptText="End" style="-fx-border-color: #008faa; -fx-background-color: #ffffff;" unFocusColor="WHITE" GridPane.columnIndex="2" GridPane.rowSpan="2">
+                        <JFXTextField alignment="CENTER" focusColor="#3ce8ff" labelFloat="true" prefWidth="228.0" promptText="End" style="-fx-border-color: #008faa; -fx-background-color: #ffffff;" unFocusColor="WHITE" GridPane.columnIndex="2" GridPane.rowSpan="2">
                            <font>
                               <Font size="24.0" />
                            </font>
@@ -115,7 +115,7 @@
             </AnchorPane>
         </items>
       </SplitPane>
-      <TitledPane animated="false" layoutY="155.0" text="Directions">
+      <TitledPane animated="false" layoutY="110.0" text="Directions">
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #008faa;">
                <children>
