--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -4,6 +4,7 @@
 <?import com.jfoenix.controls.JFXCheckBox?>
 <?import com.jfoenix.controls.JFXSlider?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,9 +15,9 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #005697;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <children>
-      <SplitPane dividerPositions="0.9035087719298246" orientation="VERTICAL" prefHeight="800.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.87468671679198" orientation="VERTICAL" prefHeight="800.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #005697;">
                <children>
                   <GridPane prefHeight="765.0" prefWidth="1280.0" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <columnConstraints>
@@ -30,7 +31,7 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <JFXButton fx:id="btnlogin" onAction="#loginPressed" prefHeight="50.0" prefWidth="150.0" text="Login" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+                        <JFXButton fx:id="btnlogin" onAction="#loginPressed" prefHeight="50.0" prefWidth="150.0" style="-fx-background-image: #d6d6d6;" text="Login" GridPane.halignment="LEFT" GridPane.valignment="TOP">
                            <font>
                               <Font size="24.0" />
                            </font>
@@ -119,7 +120,39 @@
                   </GridPane>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="150.0" prefWidth="160.0" style="-fx-background-color: #008faa;">
+               <children>
+                  <ScrollPane hbarPolicy="ALWAYS" prefHeight="97.6" prefWidth="1278.4" vbarPolicy="NEVER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <GridPane prefHeight="97.6" prefWidth="1200.0">
+                                 <columnConstraints>
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.0" minWidth="10.0" prefWidth="120.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.0" minWidth="10.0" prefWidth="120.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.0" minWidth="10.0" prefWidth="120.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.0" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.0" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.0" minWidth="10.0" prefWidth="100.0" />
+                                 </columnConstraints>
+                                 <rowConstraints>
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                 </rowConstraints>
+                                 <children>
+                                    <JFXButton fx:id="l2Button1" prefHeight="100.0" prefWidth="150.0" text="L2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" />
+                                    <JFXButton prefHeight="100.0" prefWidth="150.0" text="L1" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+                                    <JFXButton prefHeight="100.0" prefWidth="150.0" text="G" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
+                                    <JFXButton prefHeight="100.0" prefWidth="150.0" text="2" GridPane.columnIndex="4" GridPane.halignment="CENTER" />
+                                    <JFXButton prefHeight="100.0" prefWidth="134.0" text="3" GridPane.columnIndex="5" GridPane.halignment="CENTER" />
+                                    <JFXButton prefHeight="100.0" prefWidth="150.0" text="1" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
+                                 </children>
+                              </GridPane>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </ScrollPane>
+               </children>
+            </AnchorPane>
         </items>
       </SplitPane>
    </children>
