--- a/src/fxml/Request.fxml
+++ b/src/fxml/Request.fxml
@@ -17,19 +17,18 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #005697;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RequestController">
    <children>
       <GridPane layoutX="456.0" layoutY="303.0" prefHeight="800.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="460.0" minWidth="10.0" prefWidth="270.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="755.0" minWidth="10.0" prefWidth="755.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="421.0" minWidth="10.0" prefWidth="246.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="460.0" minWidth="10.0" prefWidth="158.39999999999998" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="996.7999755859377" minWidth="10.0" prefWidth="949.6000244140627" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="421.0" minWidth="10.0" prefWidth="169.9999755859376" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="170.0" minHeight="10.0" prefHeight="92.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="563.0" minHeight="10.0" prefHeight="563.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="261.0" minHeight="10.0" prefHeight="99.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="170.0" minHeight="10.0" prefHeight="60.60000228881836" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="656.8000244140625" minHeight="10.0" prefHeight="656.8000244140625" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="261.0" minHeight="10.0" prefHeight="73.79997558593755" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Staff Name" GridPane.columnIndex="1" GridPane.halignment="CENTER">
@@ -83,8 +82,8 @@
                                           <Font size="24.0" />
                                        </font>
                                     </Label>
-                                    <JFXButton fx:id="btncreate" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #d6d6d6;" text="Create" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
-                                    <JFXButton fx:id="btncancel" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #d6d6d6;" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
+                                    <JFXButton fx:id="btncreate" onAction="#requestCreatePressed" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #d6d6d6;" text="Create" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
+                                    <JFXButton fx:id="btncancel" onAction="#requestCancelPressed" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #d6d6d6;" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
                                     <JFXDatePicker fx:id="dateMenu" defaultColor="#64fff0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                                     <JFXTimePicker fx:id="timeMenu" defaultColor="#34ffeb" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
                                     <MenuButton fx:id="serviceDropDown" mnemonicParsing="false" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="CENTER">
@@ -126,9 +125,12 @@
                                                       <Font size="24.0" />
                                                    </font>
                                                 </Label>
-                                                <Label fx:id="lblSelectedService" text="Selected Servie" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-                                                <JFXButton fx:id="btncreate1" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #d6d6d6;" text="Resolve" GridPane.rowIndex="3" />
-                                                <JFXButton fx:id="btnserviceResCancel" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #d6d6d6;" text="Cancel" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                                <Label fx:id="lblSelectedService" text="Selected Service" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                                                   <font>
+                                                      <Font size="24.0" />
+                                                   </font></Label>
+                                                <JFXButton fx:id="btncreate1" onAction="#resolveServicePressed" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #d6d6d6;" text="Resolve" GridPane.rowIndex="3" />
+                                                <JFXButton fx:id="btnserviceResCancel" onAction="#cancelResolvePressed" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #d6d6d6;" text="Cancel" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                              </children>
                                           </GridPane>
                                        </children>
@@ -146,7 +148,39 @@
                   </Tab>
                   <Tab text="Settings">
                     <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #008faa;" />
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #008faa;">
+                           <children>
+                              <GridPane layoutX="292.0" layoutY="188.0" prefHeight="622.4" prefWidth="950.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Label text="Select Algorithm for Path " GridPane.halignment="CENTER">
+                                       <font>
+                                          <Font size="24.0" />
+                                       </font>
+                                    </Label>
+                                    <MenuButton mnemonicParsing="false" text="MenuButton" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                                      <items>
+                                        <MenuItem mnemonicParsing="false" text="A*" />
+                                        <MenuItem mnemonicParsing="false" text="Breadth First Search" />
+                                          <MenuItem mnemonicParsing="false" text="Depth First Search" />
+                                          <MenuItem mnemonicParsing="false" text="Dijkstra's Algorithm" />
+                                          <MenuItem mnemonicParsing="false" text="Beam Search" />
+                                      </items>
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                    </MenuButton>
+                                 </children>
+                              </GridPane>
+                           </children></AnchorPane>
                     </content>
                   </Tab>
                </tabs>
